js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib2/l2b.1.kt
inline fun funB() = listOf(fun3()).joinToString()
